force-app/main/default/objects/aecm__Program_Project__c/aecm__Program_Project__c.object-meta.xml
<CustomObject>
    <description>A project of a Tempest Program. Is a container for resource planning, budgets, and cross-reference to solutions.</description>
    <label>Program Project</label>
    <nameField>
        <label>Program Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>