force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Assumptions__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>