force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>aecm__Budget_Total__c</fullName>
    <label>Budget Total</label>
    <summarizedField>aecm__Program_Project_Budget__c.aecm__Total__c</summarizedField>
    <summaryFilterItems>
        <field>aecm__Program_Project_Budget__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Program_Project_Budget__c.aecm__Program_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>