force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>