force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>