force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Function__c.field-meta.xml
<CustomField>
    <fullName>aecm__Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Program Projects</relationshipLabel>
    <relationshipName>Program_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>