force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Key_Objectives__c.field-meta.xml
<CustomField>
    <fullName>aecm__Key_Objectives__c</fullName>
    <label>Key Objectives</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>