force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Project_Resource_Total__c.field-meta.xml
<CustomField>
    <fullName>aecm__Project_Resource_Total__c</fullName>
    <description>Total number of project resources</description>
    <inlineHelpText>Total number of project resources</inlineHelpText>
    <label>Project Resource Total</label>
    <summaryForeignKey>aecm__Project_Resource__c.aecm__Program_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>