force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>