force-app/main/default/objects/aecm__Program_Project__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress - Green</fullName>
            </value>
            <value>
                <fullName>In Progress - Yellow</fullName>
            </value>
            <value>
                <fullName>In Progress - Red</fullName>
            </value>
            <value>
                <fullName>Budget &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Funding Approved</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>