force-app/main/default/objects/aecm__Program_Project__c/listViews/aecm__Project_Kanban_By_Status.listView-meta.xml
<ListView>
    <fullName>aecm__Project_Kanban_By_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aecm__Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Project Kanban By Status</label>
</ListView>